--- a/flask_app/templates/question_4.html
+++ b/flask_app/templates/question_4.html
@@ -14,13 +14,13 @@
             <div class="card p-4">   
                     <label>What is your waist size?</label><br>
                     <div class="form-check">
-                        <input type="radio" name="waist_size" value="Less than 94 cm (M) or 80 cm (F)" required> Less than 94 cm / 80 cm<br>
+                        <input type="radio" name="waist_size" value="Less than 94 cm (M) or 80 cm (F)" required> Less than 94 cm for Men / 80 cm for Women<br>
                     </div>
                     <div class="form-check">
-                        <input type="radio" name="waist_size" value="94–102 cm (M) or 80–88 cm (F)"> 94–102 cm / 80–88 cm<br>
+                        <input type="radio" name="waist_size" value="94–102 cm (M) or 80–88 cm (F)"> 94–102 cm for Men / 80–88 cm for Women<br>
                     </div>
                     <div class="form-check">
-                        <input type="radio" name="waist_size" value="Over 102 cm (M) or Over 88 cm (F)"> Over 102 cm / 88 cm<br>
+                        <input type="radio" name="waist_size" value="Over 102 cm (M) or Over 88 cm (F)"> Over 102 cm for Men / 88 cm for Women<br>
                     </div>
             </div>
 
