Add cancel button

--- a/flask_app/templates/question_3.html
+++ b/flask_app/templates/question_3.html
@@ -58,6 +58,8 @@
                 <a href="/add/patient/{{ step - 1 }}" class="btn btn-secondary">Previous</a>
                 {% endif %}
                 
+                <a href="/cancel_questionnaire" class="btn btn-danger">Cancel</a>
+
                 <button type="submit" class="btn btn-primary" id="nextBtn" disabled>Next</button>
             </div>
         </form>
