--- a/flask_app/templates/question_5.html
+++ b/flask_app/templates/question_5.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2 class="text-center mt-4">Patient Questionnaire (Step {{ step }} of 15)</h2>
 
-        <form action="/add/patient/{{ step }}" method="post">
+        <form action="{{ url_for('patient_questionnaire', step=step, redirect=request.args.get('redirect', '')) }}" method="post">
             <div class="card p-4">   
                 <label>Do you usually do some physical activity such as brisk walking for at least 30 minutes each day?</label><br>
                 
